Site is Completed

--- a/src/components/Static files/template.css
+++ b/src/components/Static files/template.css
@@ -15,7 +15,6 @@
 } */
 
 
-
 .textResponsiveNavbar {
     font-family: 'Oswald', sans-serif;
     font-weight: 600;
@@ -37,7 +36,7 @@
 }
 
 
-.text1::after{
+.text1::after {
     content: '';
     height: 3px;
     width: 0;
@@ -49,7 +48,7 @@
     transition-duration: 0.3s;
 }
 
-.text1:hover::after{
+.text1:hover::after {
     opacity: 1;
     width: 100%;
     transition-duration: 0.3s;
@@ -62,8 +61,7 @@
     animation-duration: 4s;
 }
 
-.WorksImg {
-}
+.WorksImg {}
 
 
 .WorksText {
@@ -134,10 +132,44 @@
     color: whitesmoke;
     font-weight: 600;
     letter-spacing: 1px;
-    font-size: 1.1em;
+    font-size: 1.3em;
 }
 
+.button {
+    width: 200px;
+    text-align: center;
+    font-weight: 600;
+    font-family: 'Oswald', Sans Serif;
+    font-size: 1.8em;
+    border: 2px solid #3081D0;
+    border-radius: 25px;
+    text-decoration: none;
+    background-color: transparent;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+}
 
+.button span {
+    background-color: #3081D0;
+    border-radius: 25px;
+    height: 100%;
+    width: 0%;
+    position: absolute;
+    left: 0;
+    bottom:0;
+    z-index: -1;
+    transition-duration: 0.5s;
+}
+
+.button:hover span{
+    width: 100%;
+    transition-duration: 0.5s;
+}
+
+.button:hover{
+    border: none;
+}
 
 
 .bookMe {
